# polaris-re

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  Makefile  README.md  REVIEW.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  claude-review.yml
data/configs/: demo.json  portfolio_demo.yaml
data/ingest_mappings/: rating_codes_example.yaml
data/inputs/: demo.csv  test_inforce.csv  test_inforce.json
data/qa/: golden_config_coins.json  golden_config_flat.json  golden_config_policy_cession.json  golden_config_yrt.json  golden_inforce.csv
data/validation/: illustrative_life_table.csv
deploy/k8s/: configmap.yaml  deployment.yaml  ingress.yaml  service.yaml
deploy/prometheus/: prometheus.yml
docs/: ACTUARIAL_GLOSSARY.md  CLAUDE_CODE_TASK_DASHBOARD_PHASE_AB.md  COMMERCIAL_VIABILITY_REVIEW_2026-06-18.md  COMMERCIAL_VIABILITY_REVIEW_2026-07-05.md  COMMERCIAL_VIABILITY_REVIEW_2026-07-15.md  CONTINUATION_asset_alm.md  CONTINUATION_calendar_aligned_portfolio.md  CONTINUATION_cedant_ingestion.md  CONTINUATION_cross_jurisdiction_capital.md  CONTINUATION_dashboard_portfolio.md  CONTINUATION_deal_pricing_excel.md  CONTINUATION_expense_allowance.md  CONTINUATION_experience_gam.md  CONTINUATION_ifrs17_movement.md  CONTINUATION_licat_capital.md  CONTINUATION_mi_dashboard.md  CONTINUATION_pipeline_relocation.md  CONTINUATION_portfolio_aggregation.md  CONTINUATION_production_hardening.md  CONTINUATION_reserve_basis.md  CONTINUATION_reserve_basis_correctness.md  CONTINUATION_reserve_basis_exactness.md  CONTINUATION_substandard_rating.md  CONTINUATION_validation_benchmark.md  CONTINUATION_yrt_rate_table.md  DAILY_DEV_ROUTINE_PROPOSED_CHANGES_2026-05-23.md  DAILY_DEV_ROUTINE_PROPOSED_CHANGES_2026-06-18.md  DECISIONS.md  DEV_SESSION_LOG_2026-04-19.md  DEV_SESSION_LOG_2026-04-19_profit_guardrails.md  DEV_SESSION_LOG_2026-04-20_substandard_rating_slice_1.md  DEV_SESSION_LOG_2026-04-20_substandard_rating_slice_2.md  DEV_SESSION_LOG_2026-04-20_substandard_rating_slice_3.md  DEV_SESSION_LOG_2026-04-21_deal_pricing_excel_slice_1.md  DEV_SESSION_LOG_2026-04-24_deal_pricing_excel_slice_2.md  DEV_SESSION_LOG_2026-04-25_licat_capital_slice_1.md  DEV_SESSION_LOG_2026-04-26_licat_capital_slice_2.md  DEV_SESSION_LOG_2026-04-26_licat_capital_slice_3.md  DEV_SESSION_LOG_2026-04-27_yrt_rate_table_slice_1.md  DEV_SESSION_LOG_2026-04-28_yrt_rate_table_slice_2.md  (+138 more)
docs/routines/: README.md  daily_dev.md  pr_review.md
notebooks/: 01_term_life_yrt_pricing.ipynb  02_reserve_basis_comparison.ipynb  03_capital_standards_comparison.ipynb  04_alm_duration_gap.ipynb  05_validation_report.ipynb
scripts/: convert_lapse_tables.py  convert_soa_tables.py  generate_synthetic_block.py  ingest_inforce.py  smoke_test_inforce.py  train_ml_assumptions.py  validate_tables.py
src/polaris_re/: __init__.py  cli.py  pipeline.py
tests/: conftest.py  test_cli_alm.py  test_cli_config.py  test_cli_config_expense_allowance.py  test_cli_config_improvement.py  test_cli_experience.py  test_cli_experience_versions.py  test_cli_ingest.py  test_cli_reserve_basis.py  test_cli_streamlit_parity.py  test_cli_valuation_mortality.py  test_inforce.py  test_integration.py  test_synthetic_block.py
tests/fixtures/: __init__.py  sample_price_request.json  sample_ul_config.json  sample_whole_life_config.json  synthetic_lapse.csv  synthetic_select_ultimate.csv  synthetic_ultimate_only.csv
tests/qa/: conftest.py  generate_golden.py  golden_runner.py  test_cli_golden.py  (+2 more)
(+242 files in other folders)
