[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "polaris-re"
version = "0.1.0"
description = "Python-native life reinsurance cash flow projection and deal pricing engine"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Jonathan Crawford" }
]
keywords = ["actuarial", "reinsurance", "life insurance", "cash flow", "pricing", "mortality"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
]

dependencies = [
    "pydantic>=2.7",
    "numpy>=2.0",
    "polars>=1.0",
    "numpy-financial>=1.0",
    "scipy>=1.13",
    "typer>=0.12",
    "rich>=13.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.11",
    "ipykernel>=6.0",
    "nbformat>=5.0",
    "pandas>=2.2",
    "matplotlib>=3.9",
]
ml = [
    "scikit-learn>=1.5",
    "xgboost>=2.1",
]
api = [
    "fastapi>=0.111",
    "httpx>=0.27",
    "uvicorn[standard]>=0.30",
]

[project.scripts]
polaris = "polaris_re.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/polaris_re"]

# ---------------------------------------------------------------------------
# Dependency groups (replaces deprecated [tool.uv] dev-dependencies)
# ---------------------------------------------------------------------------
[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.11",
    "ipykernel>=6.0",
    "nbformat>=5.0",
    "pandas>=2.2",
    "matplotlib>=3.9",
    "scikit-learn>=1.5",
    "xgboost>=2.1",
    "fastapi>=0.111",
    "httpx>=0.27",
    "uvicorn[standard]>=0.30",
]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ANN", "B", "SIM", "RUF"]
ignore = [
    "ANN101",   # self annotation not required
    "ANN102",   # cls annotation not required
    "ANN401",   # Any — allowed in test fixtures
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN"]

# ---------------------------------------------------------------------------
# mypy — strict mode, Python 3.12 native typing
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring a full projection run",
]

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["src/polaris_re"]
omit = ["*/tests/*", "*/notebooks/*", "*/dashboard/app.py"]

[tool.coverage.report]
fail_under = 90
show_missing = true
